Fix #29 Shift dolos/cat/tags dropdown a little bit to the left

--- a/themes/default/public/css/dolomon.css
+++ b/themes/default/public/css/dolomon.css
@@ -42,6 +42,9 @@ span.red {
 .nolink {
     cursor: inherit;
 }
+.dropdown-menu {
+    left: -188px;
+}
 .dropdown-menu > li > a:hover.nolink {
     background-color: #FFFFFF;
 }
